unpackaged/main/default/objects/Project__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Key Project</fullName>
            </value>
            <value>
                <fullName>Important Project</fullName>
            </value>
            <value>
                <fullName>Issue Resolution</fullName>
            </value>
            <value>
                <fullName>Improvements/Strategy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>