unpackaged/main/default/objects/Project__c/fields/Category_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Category_Timeline__c</fullName>
    <label>Category Timeline</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Q1-2024</fullName>
            </value>
            <value>
                <fullName>Q2-2024</fullName>
            </value>
            <value>
                <fullName>Q3-2024</fullName>
            </value>
            <value>
                <fullName>Q4-2024</fullName>
            </value>
            <value>
                <fullName>Q1-2025</fullName>
            </value>
            <value>
                <fullName>Q2-2025</fullName>
            </value>
            <value>
                <fullName>Q3-2025</fullName>
            </value>
            <value>
                <fullName>Q4-2025</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>