unpackaged/main/default/objects/Project__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>📓Definition</fullName>
            </value>
            <value>
                <fullName>⏹️Not Started</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <label>💹Active</label>
            </value>
            <value>
                <fullName>Ongoing</fullName>
                <label>♻️Ongoing</label>
            </value>
            <value>
                <fullName>📌On Hold</fullName>
            </value>
            <value>
                <fullName>☑️Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>